--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <title>Trunk Template</title>
-    <link data-trunk rel="sass" href="index.scss" />
+    
+    <title>PizzaDumpster</title>
+    
   </head>
+  <body>
+    <h1>Hello!</h1>
+  </body>
 </html>
