--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    
+    <style>
+      h1{
+        text-align: center;
+      }
+    </style>
     <title>PizzaDumpster</title>
     
   </head>
