--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
       }
     </style>
     <title>PizzaDumpster</title>
-    
   </head>
   <body>
     <h1>Hello!</h1>
+    </hr>
+    <p>
+      Hello!
+    </p>
   </body>
 </html>
