--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
       h1{
         text-align: center;
       }
+      hr {
+        border-top: 1px dashed red;
+      }
     </style>
     <title>PizzaDumpster</title>
   </head>
