--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nova+Mono&display=swap" rel="stylesheet">
     <style>
+      body {
+        font-family: "Nova Mono", monospace;
+        font-weight: 400;
+        font-style: normal;
+      }
       h1{
         text-align: center;
       }
