--- a/index.html
+++ b/index.html
@@ -16,14 +16,20 @@
       hr {
         border-top: 1px dashed red;
       }
+      .center {
+        margin-left: auto;
+        margin-right: auto;
+      }
     </style>
     <title>PizzaDumpster</title>
   </head>
   <body>
     <h1>Hello!</h1>
     <hr>
+    <table class="center"><tr><td>
     <p>
       Hello!
     </p>
+    </td></tr></table>
   </body>
 </html>
