--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <h1>Hello!</h1>
     <hr>
-    <table class="center"><tr><td>
+    <table class="center" width=400px border=0><tr><td>
     <p>
       Hello!
     </p>
