--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       Hello!
     </p>
       <p>
-        https://quomitter.neocities.org/pixel-editor-website
+        <a href=https://quomitter.neocities.org/pixel-editor-website> Pixel Editor </a>
       </p>
     </td></tr></table>
   </body>
