--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     </p>
       <p>
         <a href=https://quomitter.neocities.org/pixel-editor-website> Pixel Editor </a>
+         <a href=https://PizzaDumpster.github.io/pixel-editor-website> Pixel Editor </a>
+         <a href=https://PizzaDumpster.github.io/human-improvement-website> What AI thinks humans should be concerned about </a>
+         <a href=https://PizzaDumpster.github.io/newspaper-website> News </a>
       </p>
     </td></tr></table>
   </body>
