--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
          <a href=https://PizzaDumpster.github.io/pixel-editor-website> Pixel Editor </a>
          <a href=https://PizzaDumpster.github.io/human-improvement-website> What AI thinks humans should be concerned about </a>
          <a href=https://PizzaDumpster.github.io/newspaper-website> News </a>
-      </p>
+         <a href=https://PizzaDumpster.github.io/javascript-alarm-clock (2)> Alarm Clock </a>
+           </p>
     </td></tr></table>
   </body>
 </html>
