--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       Hello!
     </p>
       <p>
-        <a href=https://quomitter.neocities.org/pixel-editor-website> Pixel Editor </a>
-         <a href=https://PizzaDumpster.github.io/pixel-editor-website> Pixel Editor </a>
-         <a href=https://PizzaDumpster.github.io/human-improvement-website> What AI thinks humans should be concerned about </a>
-         <a href=https://PizzaDumpster.github.io/newspaper-website> News </a>
+        <a href=https://quomitter.neocities.org/pixel-editor-website> Pixel Editor </a><br>
+         <a href=https://PizzaDumpster.github.io/pixel-editor-website> Pixel Editor </a><br>
+         <a href=https://PizzaDumpster.github.io/human-improvement-website> What AI thinks humans should be concerned about </a><br>
+         <a href=https://PizzaDumpster.github.io/newspaper-website> News </a><br>
          <a href=https://PizzaDumpster.github.io/javascript-alarm-clock (2)> Alarm Clock </a>
            </p>
     </td></tr></table>
