--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
          <a href=https://PizzaDumpster.github.io/pixel-editor-website> Pixel Editor </a><br>
          <a href=https://PizzaDumpster.github.io/human-improvement-website> What AI thinks humans should be concerned about </a><br>
          <a href=https://PizzaDumpster.github.io/newspaper-website> News </a><br>
-         <a href=https://PizzaDumpster.github.io/javascript-alarm-clock (2)> Alarm Clock </a>
+         <a href=https://PizzaDumpster.github.io/javascript-alarm-clock%20(2)> Alarm Clock </a>
            </p>
     </td></tr></table>
   </body>
